--- a/style.css
+++ b/style.css
@@ -1,3 +1,21 @@
 body {
-    background-color: #91b98d;
+    background-color: #b0daac;
+}
+
+h1 {
+
+}
+
+p{
+
+}
+
+#blog {
+    
+}
+
+.blog-post {
+    background-color: #f0e6d2;
+    padding: 15px;
+    margin-bottom: 20px;
 }
