--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #b0daac;
+    background-color: #ffd6e6;
 }
 
 h1 {
@@ -13,9 +13,55 @@ p{
 #blog {
     
 }
+.blog-container {
+    display: flex;
+    gap: 20px;
+    align-items: flex-start;
+}
 
 .blog-post {
-    background-color: #f0e6d2;
+    background-color: #ffb6e2;
     padding: 15px;
-    margin-bottom: 20px;
+    margin: 20px;
+    border-radius: 20px;
+    flex: 1;
+    text-align: center;
+}
+
+.blog-post img {
+    display: block;
+    margin: 0 auto;
+}
+
+.nav-link {;
+    padding: 10px;
+    text-align: center;
+    border-radius: 20px;
+    margin: 30px;
+    font-family: American Typewriter, serif;
+}
+h1 {
+    color: #ffffb4;
+    text-align: center;
+    font-family: American Typewriter, serif;
+    font-size: 60px;
+    text-shadow: 2px 2px #ff9cd7;
+}
+
+h2 {
+    color: #ffffb4;
+    font-family: American Typewriter, serif;
+    font-size: 40px;
+    text-shadow: 2px 2px #ff79c9;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+}
+
+footer {
+    margin: 20px;
+    text-align: center;
 }
